--- a/package.json
+++ b/package.json
@@ -23,11 +23,17 @@
   },
   "homepage": "https://github.com/LambdaSchool/Node-Blog#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "helmet": "^3.20.0",
     "knex": "^0.18.3",
+    "moment": "^2.24.0",
+    "morgan": "^1.9.1",
     "sqlite3": "^4.0.9"
   },
   "devDependencies": {
+    "eslint": "^6.1.0",
+    "eslint-plugin-react": "^7.14.3",
     "nodemon": "^1.19.1"
   }
 }
