--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "sqlite3": "^4.0.9"
   },
   "devDependencies": {
+    "debug": "^4.1.1",
     "eslint": "^6.1.0",
     "eslint-plugin-react": "^7.14.3",
     "nodemon": "^1.19.1"
